--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,6 +4,7 @@
     margin: 0;
     text-decoration: none;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 /* Estilos do cabeçalho */
@@ -28,6 +29,7 @@ nav a {
 
 nav a:hover {
     color: rgb(121, 50, 50);
+    transition: 0.5s;
 }
 
 .secao_limite {
@@ -47,7 +49,7 @@ section {   /* Utilizamos o seletor section para que o estilo que iremos definir
     text-align: center;
     background-image: url("../img/bg-estacao.png");
     background-repeat: no-repeat;
-    background-size: cover;;
+    background-size: cover;
 }
 
 .capa::before { /* Código responsável pelo efeito Overlay na imagem de fundo */
@@ -64,7 +66,7 @@ section {   /* Utilizamos o seletor section para que o estilo que iremos definir
 .capa div { /* Aqui temos o código responsável pela estilização da nossa div filha que contém os títulos da capa */
     z-index: 1;
     color: rgb(247, 235, 221);
-    position: relative; /* A nossa div recebe o position relative para que os títulos não tenham a mesma opacidade da imagem de fundo da seção 'Capa' */
+    position: relative; /* A div recebe o position relative para que os títulos não tenham a mesma opacidade da imagem de fundo da seção 'Capa' */
     width: 100%;
     height: 100%;
     display: flex;
